# rise-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile
benches/: bit_vector_access.rs  ef_iter.rs
opt_notebook/: perf_analysis.ipynb
pef/: Cargo.toml  performance.sh
pef/benches/: bit_vector_access.rs
pef/src/: lib.rs
pef/src/bitvector/: bitvector_collection.rs  mod.rs  tests.rs
scripts/: EXPERIMENTS.md  cw09_ef.toml  data.ipynb  gov2_ef.toml  run_exp.py
scripts/build_indexes/: cc_build_all.toml  cw09_build_all.toml  gov2_build_all.toml
scripts/build_mdata/: cc.toml  cw09.toml  gov2.toml
scripts/query_experiments/: ccnews.toml  ccnews_ef.toml  ccnews_opt.toml  ccnews_up.toml  cw09.toml  cw09_ef.toml  cw09_opt.toml  cw09_up.toml  gov2.toml  gov2_opt.toml  gov2_up.toml
scripts/rgb/: perform_rgb.toml
src/: config.rs  gen_sequences.rs  lib.rs  utils.rs
src/bitvector/: bitvector_collection.rs  mod.rs  tests.rs  unary_enum.rs
src/darray/: mod.rs
src/elias_fano/: all_ones_seq.rs  complement_ef.rs  ef_bv.rs  elias_fano.rs  indexed_seq.rs  indexed_seq_complement.rs  mod.rs  opt_partition.rs  ranked_bv.rs  strict_ef.rs  tests.rs  uniform_partitioned_seq.rs
src/indexes/: freq_index.rs  freq_index_builder.rs  mod.rs
src/indexes/block_freq_index/: block_posting_list.rs  mod.rs  tests.rs
src/indexes/block_freq_index/block_codices/: interpolative_coding.rs  mod.rs  streamvbyte_codec.rs  vbyte_codec.rs
src/indexes/block_freq_index/block_codices/streamvbyte/: mod.rs  utils.rs
src/positive_sequences/: mod.rs  positive_sequence.rs  tests.rs
src/queries/: block_partitioning.rs  block_posting_metadata.rs  bm25.rs  mod.rs  posting_metadata.rs  score_part.rs  topk_heap.rs
src/queries/query_algorithms/: and.rs  bm_maxscore.rs  bm_wand.rs  maxscore.rs  mod.rs  or.rs  ranked_and.rs  ranked_or.rs  wand.rs
src/queries/scorers/: bm25.rs  dot_scorer.rs  mod.rs
src/readers/: ds2i_reader.rs  mod.rs
