[package]
name = "pef"
version = "0.1.0"
edition = "2021"
authors = [
    "Rossano Venturini <rossano.venturini@unipi.it>",
    "Angelo Savino <a.savino6@studenti.unipi.it>",
]
readme = "README.md"
description = "Rust implementation of Partitioned Elias-Fano encoding"
license = "MIT"
repository = "https://github.com/rossanoventurini/pef"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
generic-tests = "0.1.2"
num-traits = "0.2.15"
rand = "0.8.5"
divan = "0.1.14"
num = "0.4.2"
indicatif = "0.17.9"
rayon = "1.10.0"
memmap2 = "0.9.5"
mem_dbg = "0.3.0"
log = "0.4.27"
epserde = { version = "0.10.3", features = ["derive", "mmap"] }
env_logger = "0.11.8"

[[bench]]
name = "bit_vector_access"
harness = false

[[bench]]
name = "ef_iter"
harness = false

[profile.release]
lto = true
debug = true
overflow-checks = false
debug-assertions = false
codegen-units = 1
