[package]
name = "rise"
version = "0.1.0"
edition = "2024"
authors = [
    "Rossano Venturini <rossano.venturini@unipi.it>",
    "Angelo Savino <angelo.savino.as@gmail.com>",
]
readme = "README.md"
description = "A Rust Inverted Search Engine (RISE) for researchers"
license = "MIT"
repository = "https://github.com/AngeloSav/rise-rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
generic-tests = "0.1.2"
num-traits = "0.2.15"
rand = "0.8.5"
divan = "0.1.14"
num = "0.4.2"
indicatif = "0.17.9"
rayon = "1.10.0"
memmap2 = "0.9.5"
mem_dbg = "0.3.0"
log = "0.4.27"
epserde = { version = "0.10.3", features = ["derive", "mmap"] }
env_logger = "0.11.8"
dsi-bitstream = "0.6.0"
rgb = { git = "https://github.com/AngeloSav/enhanced-graph-bisection.git" }
rusty-perm = "0.2.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.release]
lto = true
debug = true
overflow-checks = false
debug-assertions = false
codegen-units = 1
